prideta h1 ir p tagai
basic

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+  <h1>Sveikas pasauli</h1>
+  <p> Lorum ipsum 123456</p>
 </body>
 </html>
